examples/errors/condition_type_loop.aaa
fn main {
    while 3 true {
        nop
    }
    drop
}
